JS changes for better UI